Fix dark mode toggle

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -34,7 +34,7 @@
   --syntax-tab-size: 2;
 }
 
-@media (prefers-color-scheme: light) {
+@media (prefers-color-scheme: dark) {
   :root {
     --color-gray-20: #e0e0e0;
     --color-gray-50: #C0C0C0;
